@@ -672,6 +672,27 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|updateDependency
+parameter_list|(
+name|ModuleRevisionId
+name|mrid
+parameter_list|,
+name|IvyNode
+name|node
+parameter_list|)
+block|{
+name|dependencies
+operator|.
+name|put
+argument_list|(
+name|mrid
+argument_list|,
+name|node
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|addDependency
 parameter_list|(
 name|IvyNode
