@@ -51,6 +51,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|ivy
+operator|.
+name|util
+operator|.
+name|FileUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|tools
 operator|.
 name|ant
@@ -332,6 +346,169 @@ argument_list|)
 operator|.
 name|exists
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|Locale
+operator|.
+name|setDefault
+argument_list|(
+name|oldLocale
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
+name|testWithLatest
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Locale
+name|oldLocale
+init|=
+name|Locale
+operator|.
+name|getDefault
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+comment|// set the locale to UK as workaround for SUN bug 6240963
+name|Locale
+operator|.
+name|setDefault
+argument_list|(
+name|Locale
+operator|.
+name|UK
+argument_list|)
+expr_stmt|;
+name|IvyResolve
+name|res
+init|=
+operator|new
+name|IvyResolve
+argument_list|()
+decl_stmt|;
+name|res
+operator|.
+name|setProject
+argument_list|(
+name|project
+argument_list|)
+expr_stmt|;
+name|res
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org6/mod6.2/ivys/ivy-0.7.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|res
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|report
+operator|.
+name|setTodir
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|cache
+argument_list|,
+literal|"report"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|report
+operator|.
+name|setXml
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|report
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|File
+name|xmlReport
+init|=
+operator|new
+name|File
+argument_list|(
+name|cache
+argument_list|,
+literal|"report/org6-mod6.2-default.xml"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|xmlReport
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// check that revision 2.2 of mod1.2 is only present once
+name|String
+name|reportContent
+init|=
+name|FileUtil
+operator|.
+name|readEntirely
+argument_list|(
+name|xmlReport
+argument_list|)
+decl_stmt|;
+name|int
+name|index
+init|=
+name|reportContent
+operator|.
+name|indexOf
+argument_list|(
+literal|"<revision name=\"2.2\""
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|index
+operator|!=
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|index
+operator|=
+name|reportContent
+operator|.
+name|indexOf
+argument_list|(
+literal|"<revision name=\"2.2\""
+argument_list|,
+name|index
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|index
+operator|==
+operator|-
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
